.provarCaches/00D410000011HE0EAM/objects/rstkf__gltxnsum__c.object
<CustomObject>
    <description>gltxnsum__c</description>
    <fields>
        <fullName>rstkf__Balance_f__c</fullName>
        <formula>rstkf__gltxnsum_dramt__c - rstkf__gltxnsum_cramt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__altextid__c</fullName>
        <externalId>true</externalId>
        <label>altextid</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__gltxnsum_budget__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Budget Transaction</description>
        <inlineHelpText>This field indicates that this Transaction Summary Record contains Budget Data and is not built from an accumulation of GL Transaction data.</inlineHelpText>
        <label>Budget Transaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnsum_budup_acct__c</fullName>
        <description>Account Number (for Budget Upload)</description>
        <inlineHelpText>This field carries the text value of the Account Number used in the upload of Budget  data</inlineHelpText>
        <label>Account Number (for Budget Upload)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnsum_budup_div__c</fullName>
        <description>Division (for Budget Upload)</description>
        <inlineHelpText>This field carries the text value of the Division Number used in the upload of Budget  data</inlineHelpText>
        <label>Division (for Budget Upload)</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnsum_budup_proj__c</fullName>
        <description>Project (for Budget Upload)</description>
        <inlineHelpText>This field carries the text value of the project Number used in the upload of Budget  data</inlineHelpText>
        <label>Project (for Budget Upload)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnsum_budup_year__c</fullName>
        <description>Fiscal Year ((for Budget Upload)</description>
        <inlineHelpText>This field carries the numeric value of the Fiscal Year used in the upload of Budget  data</inlineHelpText>
        <label>Fiscal Year ((for Budget Upload)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnsum_cmpno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>gltxnsum_cmpno__c</description>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>GL Transaction Summary Object</relationshipLabel>
        <relationshipName>gltxnsums</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnsum_company__c</fullName>
        <description>gltxnsum_company__c</description>
        <label>Company</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnsum_cramt__c</fullName>
        <description>gltxnsum_cramt__c</description>
        <label>Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnsum_dimval1__c</fullName>
        <description>gltxnsum_dimval1__c</description>
        <label>Dimension 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnsum_dimval1_l__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>gltxnsum_dimval1_l__c</description>
        <label>Dimension 1</label>
        <referenceTo>rstk__sydim__c</referenceTo>
        <relationshipLabel>GL Transaction Summary Object</relationshipLabel>
        <relationshipName>gltxnsums</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnsum_dimval2__c</fullName>
        <description>gltxnsum_dimval2__c</description>
        <label>Dimension 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnsum_dimval2_l__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>gltxnsum_dimval2_l__c</description>
        <label>Dimension 2</label>
        <referenceTo>rstk__sydim__c</referenceTo>
        <relationshipLabel>GL Transaction Summary Object (Dimension 2)</relationshipLabel>
        <relationshipName>gltxnsums2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnsum_dimval3__c</fullName>
        <description>gltxnsum_dimval3__c</description>
        <label>Dimension 3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnsum_dimval3_l__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>gltxnsum_dimval3_l__c</description>
        <label>Dimension 3</label>
        <referenceTo>rstk__sydim__c</referenceTo>
        <relationshipLabel>GL Transaction Summary Object (Dimension 3)</relationshipLabel>
        <relationshipName>gltxnsums3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnsum_dramt__c</fullName>
        <description>gltxnsum_dramt__c</description>
        <label>Debit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnsum_glacct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>GL Transaction Summary Object</relationshipLabel>
        <relationshipName>GL_Transaction_Summary_Object</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnsum_glayproj__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>gltxnsum_glayproj__c</description>
        <label>Account Year Division Project</label>
        <referenceTo>rstkf__glayproj__c</referenceTo>
        <relationshipLabel>GL Transaction Summary Object</relationshipLabel>
        <relationshipName>gltxnsums</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnsum_gldiv__c</fullName>
        <formula>rstkf__gltxnsum_glayproj__r.rstkf__glayproj_glaydiv__r.rstkf__glaydiv_gldiv__r.rstkf__gldiv_sydiv__r.rstk__sydiv_div__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnsum_gldiv_l__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>gltxnsum_gldiv_l__c</description>
        <label>Division</label>
        <referenceTo>rstkf__gldiv__c</referenceTo>
        <relationshipLabel>GL Transaction Summary Object</relationshipLabel>
        <relationshipName>gltxnsums</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnsum_glperiod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>gltxnsum_glperiod__c</description>
        <label>Fiscal Period</label>
        <referenceTo>rstkf__glperiod__c</referenceTo>
        <relationshipLabel>GL Transaction Summary Object</relationshipLabel>
        <relationshipName>gltxnsums</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnsum_glproj__c</fullName>
        <formula>rstkf__gltxnsum_glayproj__r.rstkf__glayproj_glproj__r.rstkf__glproj_proj__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnsum_glproj_l__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>gltxnsum_glproj_l__c</description>
        <label>Project</label>
        <referenceTo>rstkf__glproj__c</referenceTo>
        <relationshipLabel>GL Transaction Summary Object</relationshipLabel>
        <relationshipName>gltxnsums</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnsum_glyear__c</fullName>
        <formula>rstkf__gltxnsum_glyear_l__r.rstkf__glyear_year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnsum_glyear_l__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>gltxnsum_glyear_l__c</description>
        <label>Fiscal Year</label>
        <referenceTo>rstkf__glyear__c</referenceTo>
        <relationshipLabel>GL Transaction Summary Object</relationshipLabel>
        <relationshipName>gltxnsums</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnsum_inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Inactive Budget Transaction</description>
        <inlineHelpText>This field designates that a Budget Transaction record is inactive and should be excluded from the Reporting Analytics app.</inlineHelpText>
        <label>Inactive Budget Transaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnsum_period__c</fullName>
        <description>gltxnsum_period__c</description>
        <label>Fiscal Period</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnsum_subcmpno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field identifies the originating Subsidiary Company associated with the amount summarized here.</inlineHelpText>
        <label>Subsidiary Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>GL Transaction Summary Object (Subsidiary Company)</relationshipLabel>
        <relationshipName>GL_Transaction_Summary_Object</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <description>triggeroptions__c</description>
        <label>Triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>GL Transaction Summary Object</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>rstkf__gltxnsum_cmpno__c</columns>
        <columns>rstkf__gltxnsum_budget__c</columns>
        <columns>rstkf__gltxnsum_dramt__c</columns>
        <columns>rstkf__gltxnsum_cramt__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>GL_Txn_Summary_Created_Today</fullName>
        <columns>NAME</columns>
        <columns>rstkf__gltxnsum_cmpno__c</columns>
        <columns>rstkf__gltxnsum_subcmpno__c</columns>
        <columns>rstkf__gltxnsum_budget__c</columns>
        <columns>rstkf__gltxnsum_glacct__c</columns>
        <columns>rstkf__gltxnsum_dramt__c</columns>
        <columns>rstkf__gltxnsum_cramt__c</columns>
        <columns>rstkf__gltxnsum_glperiod__c</columns>
        <columns>rstkf__gltxnsum_glyear__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__gltxnsum_cmpno__c</field>
            <operation>contains</operation>
            <value>Chan</value>
        </filters>
        <filters>
            <field>rstkf__gltxnsum_glperiod__c</field>
            <operation>equals</operation>
            <value>2021-1</value>
        </filters>
        <label>GL Txn Summary - Created Today</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>GL_Txn_Summary_Current_Period_Mtn</fullName>
        <columns>NAME</columns>
        <columns>rstkf__gltxnsum_cmpno__c</columns>
        <columns>rstkf__gltxnsum_glyear__c</columns>
        <columns>rstkf__gltxnsum_glperiod__c</columns>
        <columns>rstkf__gltxnsum_dramt__c</columns>
        <columns>rstkf__gltxnsum_cramt__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>rstkf__gltxnsum_budget__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__gltxnsum_period__c</field>
            <operation>equals</operation>
            <value>7</value>
        </filters>
        <filters>
            <field>rstkf__gltxnsum_glyear__c</field>
            <operation>equals</operation>
            <value>2021</value>
        </filters>
        <filters>
            <field>rstkf__gltxnsum_cmpno__c</field>
            <operation>contains</operation>
            <value>mountain</value>
        </filters>
        <label>GL Txn Summary - Current Period - Mtn</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__ALL</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>rstkf__gltxnsum_cmpno__c</columns>
        <columns>rstkf__gltxnsum_budget__c</columns>
        <columns>rstkf__gltxnsum_glacct__c</columns>
        <columns>rstkf__gltxnsum_period__c</columns>
        <columns>rstkf__gltxnsum_cramt__c</columns>
        <columns>rstkf__gltxnsum_dimval1__c</columns>
        <columns>rstkf__gltxnsum_dimval1_l__c</columns>
        <columns>rstkf__gltxnsum_budup_year__c</columns>
        <columns>rstkf__gltxnsum_glperiod__c</columns>
        <columns>rstkf__gltxnsum_dramt__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__gltxnsum_company__c</field>
            <operation>equals</operation>
            <value>100</value>
        </filters>
        <label>ALL</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GL Transaction Summary Object</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>